
Bug Fixes
* Installation script now sets approved shell extension registry key for WinNT and it's descendants (from Brent Beardsley)

Modified Searches

* fe - now allows you to specify an extension name instead of only the first letter (from Matthew McDougal)
* configure - localized it and added Reload menu option, fixed bug when addons directory did not exist (from Brent Beardsley)

-- What's new for 3.1.5 (December 15, 2002)

Enhancements

* Added "mozillacal" as an option for the defaultcal preference to bring up the Mozilla calendar (although it doesn't go to the selected date yet)
* Moved the Computer and Reference searches into menu subcategories.
* Added parseArgsEx and trimWhitespace functions for additional argument parsing capabilities (from Brent Beardsley)
* Added ability to change specify the first day of the week (from Harry-Anton Talvik)
* Added Estonian calendar - holidays.et.xml (from Harry-Anton Talvik)
* Added Lyricsfind search by Steve Heil

New Searches

* txp - Search the tweak database on tweakxp.com (from Wolfgang Deutsch)
* chmodconv - convert chmod numbers to strings and vice versa (from Brent Beardsley)
* bb - Search BestBuy (from Glenn Carr)
* lipsum - Generate Lorem Ipsum text (from Glenn Carr)
* amo - Search Amo's Online Crossword Dictionary (from Matthew McDougal)
* jsenc - url encrypt/decrypt strings and optionally generate encoded mailto strings to hide from email harvesters (from Brent Beardsley)
* passgen - password generator (from Brent Beardsley)
* qrz - search QRZ Ham Radio Callsign Database (from Matthew McDougal)

Modified Searches

* amaz - added domain switch to search either amaz. com de uk jp ca or fr (from Wolfgang Deutsch)
* sf - added exact and foundry switches for requiring all words and going to a foundry page (from Brent Beardsley)
* tinyurl - changed example so it wouldn't wrap
* mac - added help display if a question mark or no args are specified